--- a/client/styles/Default.css
+++ b/client/styles/Default.css
@@ -1,9 +1,3 @@
-.selected{
-    background-color: yellow;
-}
-.at-form{
-max-width: 500px;
-}
 textarea {
     min-width: 500px;
     min-height: 50px;
@@ -12,12 +6,14 @@ textarea {
     color: #444;
     padding: 5px;
 }
-
-.post{
-  border: 2px solid;
+body {
+  color: #222;
+  background-color: #eaeaea;
 }
 
-.reply{
-  margin: 15px;
-  font-size: 8px;
+.at-form{
+max-width: 500px;
+}
+.post{
+  border: 2px solid;
 }
